# multiagent-error-prop

./: .gitignore  pyproject.toml  requirements.txt
data/tasks/: two_sum_stdin.json
src/: harness.py  schemas.py
tests/: test_harness.py
